--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: font;
+    src: url(Cafe\ Matcha.ttf);
+}
+
+
+
 html {
     background-color: crimson;
 }
@@ -16,10 +23,12 @@ html {
     background-color: white;
 }
 
-.topbox{
+.topbox {
     grid-column: 1/4;
-    grid-template-columns: 2vw 10vw 1fr 10vw 2vw;
+    grid-template-rows: 1fr;
+    grid-template-columns: 2vw 1fr 3fr 3fr 2vw;
     display: grid;
+    background-color: white;
 }
 
 .top {
@@ -27,23 +36,36 @@ html {
     width: 22vw;
 }
 
-.links{
-    grid-column: 3/5;
-}
 
 .logo {
     grid-column: 1/2;
     grid-row: 1/2;
-    height: 10vh;
-    width: 10vw;
+    height: 15vh;
+    width: 15vw;
 }
 
+.link {
+    grid-column: 3/5;
+    align-self:center;
+    justify-self: right;
+    font-family: font;
+    font-size: 50px;
+}
 nav a {
-    color: white;
+    color: black;
     text-decoration: none;
 }
 
 a:hover {
     color: whitesmoke;
     background-color: black;
+}
+
+.shop {
+    background-color: black;
+    display: grid;
+    grid-template-columns: ;
+    grid-template-rows: ;
+    grid-column: ;
+    grid-row: ;
 }
